# thinker-zero

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
src/: Bitboard.hpp  Board.hpp  BoardTree.hpp  Move.hpp  RandomEngine.hpp  TTable.hpp  UCIEngine.hpp  abp_engine.cpp  abp_v2_engine.cpp  abpq_engine.cpp  boardtest.cpp  main.cpp  mcts_engine.cpp  minimax_engine.cpp  movegen_rays.hpp  perft.cpp  random_engine.cpp  score_pruning_engine.cpp  utility.hpp  zobrist.hpp
src/console/: console_parsing.cpp  console_parsing.hpp  position_printer.cpp  position_printer.hpp  uci_commands.cpp  uci_commands.hpp  uci_input.cpp  uci_input.hpp  uci_output.cpp  uci_output.hpp
src/engine/: Engine.cpp  Engine.hpp  Settings.cpp  Settings.hpp  UCISetting.hpp
src/evaluation/: evaluation.cpp  evaluation.hpp  evaluation_type.hpp  just_material.cpp  just_material.hpp  simplified_evaluation_function.cpp  simplified_evaluation_function.hpp
src/logging/: logging.cpp  logging.hpp
src/movegen/: movegen.cpp  movegen.hpp  movegen_bishop.cpp  movegen_castling.cpp  movegen_king.cpp  movegen_knight.cpp  movegen_pawn.cpp  movegen_queen.cpp  movegen_rays.hpp  movegen_rook.cpp
src/position/: Position.cpp  Position.hpp  PositionAnalysis.cpp  PositionAnalysis.hpp  PositionString.cpp  PositionString.hpp
src/search/: Search.cpp  Search.hpp
src/types/: Bitboard.hpp  BitboardList.hpp  BitboardTypes.hpp  Color.hpp  Move.cpp  Move.hpp  Piece.hpp  Position.cpp  Position.hpp  PositionString.cpp  PositionString.hpp  Square.cpp  Square.hpp  conversions.hpp
test/: abp_vs_abpq.sh  abp_vs_abpv2.sh  results.txt  results_big.txt  test.sh  tourny.sh
(+5 files in other folders)
